# stlc

./: .gitignore  LICENSE  cabal.project  stlc.cabal
app/: Main.hs
src/: Lambda.hs  Parser.hs  Repl.hs
src/Lambda/: Eval.hs  Parser.hs  Renamer.hs  Syntax.hs  Typechecker.hs
src/Repl/: Command.hs  Parser.hs
