cabal-version: 3.4
name:          stlc
version:       0.1.0.0
license:       ISC
license-file:  LICENSE
maintainer:    kevin@pnotequalnp.com
author:        Kevin Mullins
category:      Language

common base
  ghc-options:
    -Wall -Wcompat -Wno-name-shadowing -Werror=incomplete-patterns
    -Werror=missing-fields -Werror=incomplete-record-updates
    -Werror=missing-deriving-strategies

  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DerivingVia
    DuplicateRecordFields
    ImplicitParams
    LambdaCase
    NoFieldSelectors
    NoStarIsType
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    ViewPatterns

  build-depends:
    , base        ^>=4.18.1.0
    , diagnose    ^>=2.5.1
    , text        ^>=2.0.2
    , text-short  ^>=0.1.5

library
  import:          base
  hs-source-dirs:  src
  exposed-modules:
    Lambda
    Lambda.Eval
    Lambda.Parser
    Lambda.Renamer
    Lambda.Syntax
    Lambda.Typechecker
    Parser
    Repl
    Repl.Command
    Repl.Parser

  build-depends:
    , megaparsec          ^>=9.6.1
    , mtl                 ^>=2.3.1
    , parser-combinators  ^>=1.3.0
    , primitive           ^>=0.9.0

executable stlc
  import:         base
  main-is:        Main.hs
  hs-source-dirs: app
  build-depends:  stlc
